<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recipe App</string>
    <string name="RecipeLabel">Step:</string>
    <string name="IngredientLabel">Ingredients</string>
    <string name="InstructionLabel">Instructions</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="favorite">☆</string>
    <string name="SearchFail">Unforunately,there was no food to be found</string>
    <string name="cancel">Unforunately,there was no food to be found</string>
    <string name="favoriteRecipes">Open Favorite</string>
    <string name="stepNumber">(Step %2$d of %3$d)</string>
    <string name="cardfavoritebutton">Favoriter button</string>
    <string name="cardUnfavoriteButton">★</string>
</resources>